Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45516

clients not starting sensors when sensorfw has been restarted

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.1
    • 5.4.1
    • Sensors
    • None

      When the Qt client is active when sensorfw gets restarted, it will work properly.

      The problem occurs when the clients that have non null sensor objects are stopped at the time of the sensorfw restart. They cannot be made active until the sensor object is deleted, and reconstructed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lpotter Lorn Potter
            lpotter Lorn Potter
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes