Fix clients starting sensors when sensorfw restarts.

Task-number: QTBUG-45516
Change-Id: I45215714e8f5e4693e43d022a3ca313576c85d79
Reviewed-by: Alex Blasche <alexander.blasche@theqtcompany.com>